adding images and its attributes

--- a/index.html
+++ b/index.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="HTML fundamental course" />
+    <meta name="keywords" content="html,css,Javascript" />
     <title>The Learning Platform that you where waiting for</title>
   </head>
   <body>
     <h1>✨ Almdrasa ✨</h1>
     <h2>The Learning Platform that you where waiting for</h2>
+    <img
+      src="assets/mohamed-abusrea.jpg"
+      alt="picture of auther"
+      width="50"
+      height="50"
+    />
     <p>Posted by <strong>Naglaa Mossleh</strong> on Saturday, July 2nd 2022</p>
+    <img
+      src="assets/post-img.jpg"
+      alt="picture Almdrasa log"
+      width="500"
+      height="200"
+    />
     <em>Almdrasa</em> is a new learning platform that tries to fill the gab in
     the Arabic content. The idea is to find the best programming courses in the
     field and try to reproduce it in Arabic with high standards (Audio, Video,
