--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>✨ Almdrasa ✨</h1>
+    <a href="courses.html">courses</a>
     <h2>The Learning Platform that you where waiting for</h2>
     <img
       src="assets/mohamed-abusrea.jpg"
@@ -48,7 +49,10 @@
         prizes
       </li>
     </ol>
-    <p>You can learn more at Almdrasa website.</p>
+    <p>
+      You can learn more at
+      <a href="https://almdrasa.com/" target="_blank"> Almdrasa website</a>.
+    </p>
 
     <h3>What courses do we offer?</h3>
     <ul>
