arabic language page

--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
   <body>
     <header>
       <h1>✨ Almdrasa ✨</h1>
-      <nav>
+      <nav aria-label="primary navigation">
         <a href="courses.html">Courses</a>
         <a href="#">Blog</a>
         <a href="#">Contact Us</a>
+      </nav>
+      <nav aria-label="language navigation">
+        <a href="index.html">English</a>
+        <a href="index-ar.html">Arabic</a>
       </nav>
     </header>
     <article>
@@ -23,9 +27,7 @@
         width="50"
         height="50"
       />
-      <p>
-        Posted by <strong>Naglaa Mossleh</strong> on Saturday, July 2nd 2022
-      </p>
+      <p>Posted by <strong>Naglaa Mossleh</strong> on Saturday, Jan 4th 2024</p>
       <img
         src="assets/post-img.jpg"
         alt="picture Almdrasa log"
@@ -82,6 +84,29 @@
         <li>Fullstack roadmap</li>
       </ul>
       <p>That's it for now. See you in the next one 👋!</p>
+      <h3>Related posts</h3>
+      <ul>
+        <li>
+          <img
+            src="assets/related-1.jpg"
+            alt="related-1"
+            width="75"
+            height="75"
+          />
+          <a href="#">Get Styling with CSS</a>
+          <p>By mohamed abusrea</p>
+        </li>
+        <li>
+          <img
+            src="assets/related-2.jpg"
+            alt="related-2"
+            width="75"
+            height="75"
+          />
+          <a href="#">Getting started with javascript</a>
+          <p>By Ahmed Fathy</p>
+        </li>
+      </ul>
     </article>
     <footer>Copyright &copy; 2023 Almdrasa</footer>
   </body>
