--- a/index-ar.html
+++ b/index-ar.html
@@ -84,7 +84,9 @@
         <li>مسار الـ Fullstack</li>
       </ul>
       <p>كان هذا كل شئ وأراكم في المقال القادم إن شاء الله 👋!</p>
-      <h3>مقالات ذات صلة</h3>
+    </article>
+    <aside>
+      <h4>مقالات ذات صلة</h4>
       <ul>
         <li>
           <img
@@ -107,7 +109,7 @@
           <p>بواسطة أحمد فتحي</p>
         </li>
       </ul>
-    </article>
+    </aside>
     <footer>حقوق النشر محفوظة &copy; 2023 بواسطة المدرسة Almdrasa</footer>
   </body>
 </html>
