--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
         <li>Fullstack roadmap</li>
       </ul>
       <p>That's it for now. See you in the next one 👋!</p>
-      <h3>Related posts</h3>
+    </article>
+    <aside>
+      <h4>Related posts</h4>
       <ul>
         <li>
           <img
@@ -107,7 +109,7 @@
           <p>By Ahmed Fathy</p>
         </li>
       </ul>
-    </article>
+    </aside>
     <footer>Copyright &copy; 2023 Almdrasa</footer>
   </body>
 </html>
