--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>The Learning Platform that you where waiting for</title>
   </head>
   <body>
-    <header>
+    <header class="main-header">
       <h1>✨ Almdrasa ✨</h1>
       <nav aria-label="primary navigation">
         <a href="courses.html">Courses</a>
