--- a/challenge-1/challenge-1.html
+++ b/challenge-1/challenge-1.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <title>Css Fundamentals course</title>
-    <link href="style1.css" rel="stylesheet" />
+    <link href="style.css" rel="stylesheet" />
   </head>
   <body>
     <article class="course">
       <h2 class="course-name">Css Fundamentals course</h2>
       <img
         class="course-img"
-        src="assets/related-1.jpg"
+        src="related-1.jpg"
         alt="Css Fundamentals course"
         width="250"
         height="250"
