--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
             src="assets/post-img.jpg"
             alt="picture Almdrasa log"
           />
+          <div class="reactions">
+            <button>👍 Like</button>
+            <button>😆 Celebrate</button>
+            <button>❤ Love</button>
+          </div>
         </header>
         <p>
           <em>Almdrasa</em> is a new learning platform that tries to fill the
