styling arabic page

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         </nav>
         <nav aria-label="language navigation">
           <a href="index.html">English</a>
+          <span class="selector">|</span>
           <a href="index-ar.html">Arabic</a>
         </nav>
       </header>
